--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,35 +2,44 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
   <display-name>Archetype Created Web Application</display-name>
   <display-name>Archetype Created Web Application</display-name>
- 
   <servlet>
-  	<servlet-name>NewsController</servlet-name>
-  	<display-name>NewsController</display-name>
-  	<description></description>
-  	<servlet-class>app.controller.NewsController</servlet-class>
+    <description></description>
+    <display-name>NewsController</display-name>
+    <servlet-name>NewsController</servlet-name>
+    <servlet-class>app.controller.NewsController</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>NewsController</servlet-name>
-  	<url-pattern>/NewsController</url-pattern>
+    <servlet-name>NewsController</servlet-name>
+    <url-pattern>/NewsController</url-pattern>
   </servlet-mapping>
   <servlet>
-  	<servlet-name>UtenteController</servlet-name>
-  	<display-name>UtenteController</display-name>
-  	<description></description>
-  	<servlet-class>app.controller.UtenteController</servlet-class>
+    <description></description>
+    <display-name>UtenteController</display-name>
+    <servlet-name>UtenteController</servlet-name>
+    <servlet-class>app.controller.UtenteController</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>UtenteController</servlet-name>
-  	<url-pattern>/UtenteController</url-pattern>
+    <servlet-name>UtenteController</servlet-name>
+    <url-pattern>/UtenteController</url-pattern>
   </servlet-mapping>
   <servlet>
-  	<servlet-name>AdminController</servlet-name>
-  	<display-name>AdimnController</display-name>
-  	<description></description>
-  	<servlet-class>app.controller.AdminController</servlet-class>
+    <description></description>
+    <display-name>AdimnController</display-name>
+    <servlet-name>AdminController</servlet-name>
+    <servlet-class>app.controller.AdminController</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>AdminController</servlet-name>
-  	<url-pattern>/AdminController</url-pattern>
+    <servlet-name>AdminController</servlet-name>
+    <url-pattern>/AdminController</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>HomeServlet</display-name>
+    <servlet-name>HomeServlet</servlet-name>
+    <servlet-class>app.controller.HomeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>HomeServlet</servlet-name>
+    <url-pattern></url-pattern>
   </servlet-mapping>
 </web-app>
